# universal-graphics-driver

./: Cargo.toml  README.md
src/: detect.rs  gui.rs  main.rs  utils.rs
src/core/: mod.rs
src/drivers/: mod.rs
