[package]
name = "universal_graphics_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winreg", "setupapi"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
iced = { version = "0.5", features = ["svg", "system"] }
thiserror = "1.0"
sysinfo = "0.28"
zip = "0.6"
walkdir = "2.3"
directories = "4.0"